--- a/css/main.css
+++ b/css/main.css
@@ -278,6 +278,17 @@ MONTH START
 .month-start div.timeline-content {
 }
 
+.month-start h2.timeline-title {
+  font-size: 2.5em;
+  text-transform: uppercase;
+  font-weight: bolder;
+  color: #006d00;
+}
+
+.month-start .timeline-item.period {
+  text-align: left;
+}
+
 /*----------------------------------------------
 MONTH ITEM
 ----------------------------------------------*/
@@ -287,7 +298,7 @@ MONTH ITEM
 }
 
 .month-item div.timeline-info span.range {
-  font-size: 1.4em;
+  font-size: 1.6em;
 }
 
 .month-item div.timeline-info sub {
@@ -296,3 +307,8 @@ MONTH ITEM
   margin-top: 0.4em;
   text-transform: uppercase;
 }
+
+.month-item h3.timeline-title {
+  font-size: 1.5em;
+}
+
